--- a/_includes/_nav.njk
+++ b/_includes/_nav.njk
@@ -1,8 +1,3 @@
-<a href="/">Home</a>
-<a href="/blog/">Blog</a>
-<a href="/projects/">Projects</a>
-<a href="/speaking/">Speaking</a>
-<a href="/publications/">Publications</a>
-<a href="/press/">Press</a>
-<a href="/interviews/">Interviews</a>
-<a href="/about/">About</a>
+{% for link in nav %}
+<a href="/{{ link.path }}/"{{ "class=selected" if siteArea === link.path }}>{{ link.title }}</a>
+{% endfor %}
