--- a/assets/style.postcss
+++ b/assets/style.postcss
@@ -92,6 +92,7 @@ body {
 }
 
 h1, h2, h3, h4, h5, h6 {
+	position: relative;
 	font-feature-settings: "lnum";
 	font-variant-numeric: lining-nums;
 	font-weight: 800;
@@ -103,6 +104,14 @@ h1, h2, h3, h4, h5, h6 {
 
 	& a {
 		color: inherit;
+	}
+
+	& > a:only-child {
+		text-decoration: none;
+
+		&:hover {
+			color: inherit;
+		}
 	}
 }
 
@@ -308,9 +317,6 @@ body > header {
 						content: "}";
 						left: 100%;
 					}
-
-
-
 				}
 			}
 		}
@@ -588,6 +594,10 @@ pre {
 		padding: .5em .1em;
 		border-bottom: 1px solid var(--color-gray-light);
 
+		.type {
+			color: var(--color-gray-medium);
+		}
+
 		.article {
 			display: block;
 		}
@@ -611,7 +621,12 @@ pre {
 }
 
 .newsletter {
+	> h3 {
+		margin: 0;
+	}
+
 	.issues {
+		margin: 0;
 		list-style: none;
 		display: flex;
 		flex-wrap: wrap;
@@ -620,8 +635,19 @@ pre {
 
 	.issue > a {
 		background: var(--color-gray-medium);
-		padding: .1em .5em;
+		padding: .3em .5em;
 		border-radius: .2em;
 		color: white;
+		text-decoration: none;
+		font-family: var(--font-sans);
+		font-size: 80%;
+
+		&:hover {
+			background: var(--color-accent);
+		}
+
+		.issue-number {
+			font-weight: bold;
+		}
 	}
 }
