--- a/assets/style.postcss
+++ b/assets/style.postcss
@@ -511,6 +511,7 @@ body > footer {
 
 .post-meta {
 	display: flex;
+	gap: 2em;
 	color: var(--color-gray-medium);
 	font-size: .77rem;
 	font-family: var(--font-sans);
@@ -529,13 +530,22 @@ body > footer {
 		}
 	}
 
+	>::before {
+		font-family: bootstrap-icons;
+		display: inline-block;
+		vertical-align: -.1em;
+		margin-right: .5em;
+	}
+
 	& time {
 		&::before {
 			content: "\F1F6";
-			font-family: bootstrap-icons;
-			display: inline-block;
-			vertical-align: middle;
-			margin-right: .5em;
+		}
+	}
+
+	& .comment-count {
+		&::before {
+			content: "\F268";
 		}
 	}
 
