--- a/blog/index.njk
+++ b/blog/index.njk
@@ -17,7 +17,8 @@ permalink: "/blog/{% if pagination.pageNumber > 0 %}page/{{ pagination.pageNumbe
 <footer class="pagination">
 {% if pagination.href.previous %}<a href="{{ pagination.href.previous }}" class="previous">← Previous</a>{% endif %}
 <div class="current">
-	pagination.pages
+	{{ pagination.pageNumber + 1 }}
+	of {{ pagination.pages.length }}
 </div>
 {% if pagination.href.next %}<a href="{{ pagination.href.next }}" class="next">Next →</a>{% endif %}
 </footer>
