--- a/press/index.njk
+++ b/press/index.njk
@@ -5,43 +5,47 @@ mavo: true
 
 
 
-## Interviews
+<h2>Interviews</h2>
 
-If you want to learn more about me, you could start by reading or watching
+<p>If you want to learn more about me, you could start by reading or watching
 the many interviews I have given over the years, both in person and online.
 
 
-<section class="press">
+<section class="publications">
 {% for article in press.interviews %}
 <article>
-	<a class="article" href="{{ article.url }}">
+	<a class="title" href="{{ article.url }}">
 		{% if article.type %}<span class="type">[{{ article.type }}]</span>{% endif %}
 		{{ article.title }}
 	</a>
-	<a class="venue" href="{{ article.venueUrl }}">{{ article.venue }}</a>
-	<time datetime="{{ article.date }}">{{ article.date | format_date("medium") }}</time>
+	<footer>
+		<a class="venue" href="{{ article.venueUrl }}">{{ article.venue }}</a>
+		<time datetime="{{ article.date }}">{{ article.date | format_date("medium") }}</time>
+	</footer>
 </article>
 {% endfor %}
 </section>
 
-## Articles
+<h2>Articles</h2>
 
-My work and/or opinions have been featured many times in leading industry publications, both online and printed.
+<p>My work and/or opinions have been featured many times in leading industry publications, both online and printed.
 The following is a small sample of the mentions I managed to collect, **very infrequently updated**.
 
-<section class="press">
+<section class="publications">
 {% for article in press.articles %}
 <article>
-	<a class="article" href="{{ article.url }}">{{ article.title }}</a>
-	<a class="venue" href="{{ article.venueUrl }}">{{ article.venue }}</a>
-	<time datetime="{{ article.date }}">{{ article.date | format_date("medium") }}</time>
+	<a class="title" href="{{ article.url }}">{{ article.title }}</a>
+	<footer>
+		<a class="venue" href="{{ article.venueUrl }}">{{ article.venue }}</a>
+		<time datetime="{{ article.date }}">{{ article.date | format_date("medium") }}</time>
+	</footer>
 </article>
 {% endfor %}
 </section>
 
-## Newsletters
+<h2>Newsletters</h2>
 
-My work has been featured in nearly every front-end newsletter.
+<p>My work has been featured in nearly every front-end newsletter.
 The following is a small, infrequently updated sample of the mentions I collected.
 
 <div mv-app="newsletters" mv-storage="https://github.com/LeaVerou/leaverou.github.io/blob/master/data.json" mv-bar="no-login">
