--- a/_includes/page.njk
+++ b/_includes/page.njk
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" vocab="https://schema.org/">
+<html lang="en" vocab="https://schema.org/" data-area="{{ siteArea }}">
 <head>
 	<meta charset="UTF-8">
 	<title>{{ title }}{% if title %} &bull; {% endif %}Lea Verou</title>
