--- a/assets/style.css
+++ b/assets/style.css
@@ -33,12 +33,26 @@
 
 	--color-magenta: #f06;
 	--color-orange: #f73;
+	--color-tirquoise: #0bd;
+	--color-green: yellowgreen;
+
 	--color-accent: var(--color-magenta);
 	--color-accent2: var(--color-orange);
+	--color-accent2: var(--color-tirquoise);
+	--color-accent4: var(--color-green);
 
 	--gray: 220 10%;
-	--color-gray-medium: hsl(var(--gray) 50%);
-	--color-gray-light: #dedfdf;
+	--color-gray-20: hsl(var(--gray) 20%);
+	--color-gray-40: hsl(var(--gray) 40%);
+	--color-gray-50: hsl(var(--gray) 50%);
+	--color-gray-60: hsl(var(--gray) 60%);
+	--color-gray-80: hsl(var(--gray) 80%);
+	--color-gray-90: hsl(var(--gray) 90%);
+	--color-gray-95: hsl(var(--gray) 95%);
+
+	--color-gray-medium: var(--color-gray-50);
+	--color-gray-light: var(--color-gray-90);
+
 	/* --color-light-1: #dcd7ca; */
 	--color-light-1: hsl(35 100% 90%);
 	/* --color-light-2: #f5efe0; */
@@ -124,13 +138,42 @@ h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
 		color: inherit;
 	}
 
-h1 > a:only-child, h2 > a:only-child, h3 > a:only-child, h4 > a:only-child, h5 > a:only-child, h6 > a:only-child {
+h1 > a:only-child, h2 > a:only-child, h3 > a:only-child, h4 > a:only-child, h5 > a:only-child, h6 > a:only-child { /* Link wrapping heading’s entire contents */
 		text-decoration: none;
 	}
 
 h1 > a:only-child:hover, h2 > a:only-child:hover, h3 > a:only-child:hover, h4 > a:only-child:hover, h5 > a:only-child:hover, h6 > a:only-child:hover {
 			color: inherit;
 		}
+
+h1[data-count], h2[data-count], h3[data-count], h4[data-count], h5[data-count], h6[data-count] {
+		position: relative;
+	}
+
+h1[data-count]::before, h2[data-count]::before, h3[data-count]::before, h4[data-count]::before, h5[data-count]::before, h6[data-count]::before {
+			content: attr(data-count) " ";
+			display: inline-flex;
+			align-items: center;
+			justify-content: center;
+			right: 100%;
+			margin-right: .4em;
+			margin-top: -.25em;
+			background: var(--color-accent);
+			color: white;
+			width: 2em;
+			line-height: 2;
+			box-sizing: content-box;
+			border-radius: 50%;
+			font-size: 75%;
+			font-weight: 300;
+		}
+
+@media (width > 960px) {
+
+h1[data-count]::before, h2[data-count]::before, h3[data-count]::before, h4[data-count]::before, h5[data-count]::before, h6[data-count]::before {
+				position: absolute;
+		}
+			}
 
 h1 {
 	font-size: calc(210% + clamp(0%, 1.5vw, 180%));
@@ -149,7 +192,11 @@ h4 {
 }
 
 footer h4,
-.warning::after {
+.callout::after,
+.warning::after,
+.info::after,
+.note::after,
+.tip::after {
 	padding: .3em 1em;
 	width: max-content;
 	column-span: all;
@@ -178,6 +225,10 @@ h6 {
 p {
 	line-height: 1.5;
 	margin: 0 0 1em 0;
+}
+
+ul {
+	margin-left: .5em;
 }
 
 a {
@@ -221,6 +272,7 @@ hr::before {
 
 video, img {
 	max-width: 100%;
+	object-fit: cover;
 }
 
 pre, code {
@@ -230,6 +282,17 @@ pre, code {
 figure {
 	margin: 1em 0;
 }
+
+figure > p {
+		margin: 0;
+	}
+
+figure figcaption {
+		font: 500 75% var(--font-sans);
+		color: var(--color-gray-medium);
+	}
+
+/* Variations */
 
 figure.center {
 		width: fit-content;
@@ -283,18 +346,33 @@ figure.left,
 	}
 		}
 
-figure figcaption {
-		font-size: 70%;
+figure > a > img {
+		display: block;
 	}
 
-figure > p {
-		margin: 0;
-	}
+/* Has multiple images? */
 
-figure figcaption {
-		font: 500 80% var(--font-sans);
-		color: var(--color-gray-medium);
-	}
+figure:has(> :nth-last-child(3)):has(> .main) { /* Has main image? */
+			display: grid;
+			grid-template-columns: 3fr 1fr;
+			grid-auto-flow: dense;
+			gap: .3rem;
+		}
+
+figure:has(> :nth-last-child(3)):has(> .main) > .main {
+				grid-row-end: span 2;
+				height: 100%;
+			}
+
+figure:has(> :nth-last-child(3)):has(> .main) > :not(.main, figcaption) {
+				grid-column: 2;
+
+				xmax-width: 250px;
+			}
+
+figure:has(> :nth-last-child(3)):has(> .main) figcaption {
+				grid-column-end: span 2;
+			}
 
 @property --number {
 	syntax: "<number>";
@@ -684,33 +762,66 @@ pre:nth-of-type(3n + 1),
 	}
 }
 
-.press > article {
+.publications > article {
 		padding: .5em .1em;
 		border-bottom: 1px solid var(--color-gray-light);
 	}
 
-.press > article .type {
+.publications > article .type {
 			color: var(--color-gray-medium);
 		}
 
-.press > article .article {
+.publications > article .title {
 			display: block;
 		}
 
-.press > article .venue, .press > article time {
+.publications > article .authors {
+			margin: 0;
+		}
+
+.publications > article .authors > .author.me {
+					font-weight: bold;
+				}
+
+.publications > article .authors > .author:not(:last-of-type)::after {
+					content: ", ";
+				}
+
+.publications > article > footer {
 			font-size: 80%;
-		}
-
-.press > article .venue {
-			color: black;
-		}
-
-.press > article time {
 			color: var(--color-gray-medium);
 		}
 
-.press > article time::before {
+.publications > article > footer > :not(:first-child)::before {
 				content: " • ";
+				opacity: .7;
+			}
+
+.publications > article .venue {
+			color: inherit;
+		}
+
+[data-area="press"] :is(.publications > article .venue) {
+				color: black;
+			}
+
+.publications > article > .comment {
+			font-size: 75%;
+			color: var(--color-gray-40);
+		}
+
+.publications > article > .comment > * {
+				mix-blend-mode: multiply;
+			}
+
+.publications > article > .comment > ul {
+				padding-left: 0;
+			}
+
+.publications > article > .comment a {
+				color: inherit;
+				text-decoration: underline;
+				text-decoration-thickness: 1px;
 			}
 
 .newsletter > h3 {
@@ -1007,15 +1118,15 @@ pre:nth-of-type(3n + 1),
 		}
 
 .event .talk a.details {
-			background: #0bd;
+			background: var(--color-accent3);
 		}
 
 .event .talk a.video {
-			background: yellowgreen;
+			background: var(--color-accent4);
 		}
 
 .event .talk a:hover {
-			background: #f06;
+			background: var(--color-accent);
 			color: white;
 		}
 
@@ -1135,21 +1246,28 @@ pre:nth-of-type(3n + 1),
 }
 
 .callout,
-.warning {
+.warning,
+.info,
+.note,
+.tip {
 	position: relative;
 	background: var(--color-light-2);
-	padding: .8em 1em;
-	border-radius: .3em;
+	padding: 1.2rem 1rem .8rem;
+	border-radius: .3rem;
 	margin-block: 1em;
 	font-family: var(--font-sans);
 	font-size: 80%;
 	font-weight: 500;
 }
 
-.callout::after, .warning::after {
+.callout > :is(p, ul, ol, dl):only-child, .warning > :is(p, ul, ol, dl):only-child, .info > :is(p, ul, ol, dl):only-child, .note > :is(p, ul, ol, dl):only-child, .tip > :is(p, ul, ol, dl):only-child {
+		margin-block: 0;
+	}
+
+.callout::after, .warning::after, .info::after, .note::after, .tip::after {
 		content: var(--label);
 		position: absolute;
-		top: -1.4em;
+		top: -1em;
 		left: 1.4rem;
 		color: var(--color-light-2);
 		margin-left: -2em;
@@ -1158,11 +1276,14 @@ pre:nth-of-type(3n + 1),
 @media (width > 600px) {
 
 .callout,
-.warning {
+.warning,
+.info,
+.note,
+.tip {
 		padding-left: 4.5em;
 }
 
-		.callout::before, .warning::before {
+		.callout::before, .warning::before, .info::before, .note::before, .tip::before {
 			content: var(--icon);
 			position: absolute;
 			left: .5rem;
@@ -1175,7 +1296,7 @@ pre:nth-of-type(3n + 1),
 			color: var(--color-orange);
 		}
 
-		.callout::after, .warning::after {
+		.callout::after, .warning::after, .info::after, .note::after, .tip::after {
 			left: 4.2rem;
 		}
 	}
@@ -1183,4 +1304,9 @@ pre:nth-of-type(3n + 1),
 .warning {
 	--label: "Warning";
 	--icon: "\F33A";
+}
+
+.info {
+	--label: "Info";
+	--icon: "\F434";
 }
